// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax bn az bo b1 b2 b3 b4 bp bq br bs be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Large
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Button Variant 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Primary
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Secondary
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Poster 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b3 b1 c0 c1"
        src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
      />
      <div
        className="c2 c3 c4 c5"
      >
        <h1
          className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
        >
          July 26
        </h1>
        <div
          className="ch ci ax cj ck cl"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Thumbnail 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b3 b1 c0 c1"
        src="https://image.tmdb.org/t/p/w300/aQLygZOIKai6aaiBAeeKpIWO5nc.jpg"
      />
      <div
        className="c2 c3 c4 c5"
      >
        <div
          className="ch ci ax cj ck cl"
        >
          <div
            className="ch cm ax cj ck cl"
          >
            <div
              className="c6 c5"
              data-baseweb="block"
            >
              Once Upon a Time in Hollywood
            </div>
            <div
              className=""
              data-baseweb="block"
            >
              <svg
                className="cn co cp cq cr"
                data-baseweb="icon"
                viewBox="0 0 20 20"
              >
                <title>
                  Show
                </title>
                <path
                  d="M.2 10a11 11 0 0119.6 0A11 11 0 01.2 10zm9.8 4a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
               7.5k
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Deck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="cs ct cu cv"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ul
        className="cw cx cy cs cz d0 d1 d2 d3 d4 d5"
      >
        <li
          className="d6 d7"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d6 d7"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d6 d7"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d6 d7"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d6 d7"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d6 d7"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d6 d7"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
      </ul>
      <button
        className="d8 d9 da ap db dc dd de df dg dh di dj dk"
        onClick={[Function]}
      >
        &lt;
      </button>
      <button
        className="d8 d9 da ap db dc dd de df dg dh di dj dl"
        onClick={[Function]}
      >
        &gt;
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Genre Base 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax cj ck cl dm dn do dp b5 b6 b7 b8 dq dr ds dt du"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginBottom": "6px",
          "marginRight": "6px",
        }
      }
    >
      Action
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax cj ck cl dm dn do dp b5 b6 b7 b8 dq dr ds dt du"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginBottom": "6px",
          "marginRight": "6px",
        }
      }
    >
      Thriller
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax cj ck cl dm dn do dp b5 b6 b7 b8 dq dr ds dt du"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginBottom": "6px",
          "marginRight": "6px",
        }
      }
    >
      Drama
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Modal Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open default modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open full modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open auto modal
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Search Size 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ax cj ck cl b9 d0 cs"
      data-baseweb="input"
    >
      <div
        className="d7 d0 cs dv bu dw an ao b3 b4 b1 b2 ax cj ck cl b9 dx bj"
        data-baseweb="base-input"
      >
        <div
          className="d0 af b7"
        >
          <svg
            className="cn dy dz e0 e1"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="d7 ba ah ai ak cs c1 e2 e3 b5 b6 e4 e5 ax cj ck cl b9 e6 e7"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Default"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="ax ay ck b0 b9 d0 cs"
      data-baseweb="input"
    >
      <div
        className="d7 d0 cs dv bu dw an ao b3 b4 b1 b2 ax ay ck b0 b9 dx bj"
        data-baseweb="base-input"
      >
        <div
          className="d0 af b7"
        >
          <svg
            className="cn dy dz e0 e1"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="d7 ba ah ai ak cs c1 e2 e3 e8 e9 ea eb ax ay ck b0 b9 e6 e7"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Medium"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="ax df ck bo b9 d0 cs"
      data-baseweb="input"
    >
      <div
        className="d7 d0 cs dv bu dw an ao b3 b4 b1 b2 ax df ck bo b9 dx bj"
        data-baseweb="base-input"
      >
        <div
          className="d0 af b7"
        >
          <svg
            className="cn dy dz e0 e1"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="d7 ba ah ai ak cs c1 e2 e3 bp bq ec ed ax df ck bo b9 e6 e7"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Large"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;
